<resources>
    <string name="app_name">Fungi.Info</string>
    <string name="copyright">© Bangkit Academy | C241-PS495</string>
    <string name="gagal">Image classifier failed to initialize. See error logs for details</string>
    <string name="gagal_ambil_foto">Gagal Mengambil Foto</string>
    <string name="hapus">Hapus</string>
    <string name="simpan_jamur_ini">Simpan Jamur Ini</string>
    <string name="hasil_deteksi">Hasil Deteksi</string>
    <string name="hasil">Hasil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Selamat Datang !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lupaPassword">"Lupa Akun? <b>Reset Password</b>"</string>
    <string name="punyaAkun">"Punya Akun? <b>Masuk</b>"</string>
    <string name="daftar_fungi">Daftar Fungi</string>
    <string name="aku_sudah_punya_akun">Aku Sudah Punya Akun</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="camera_permission_required">Camera permission is required to take photos</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="password_harus_lebih_dari_6_karakter">Password harus lebih dari 6 karakter</string>
    <string name="email_atau_password_salah">Email atau password salah. Coba cek lagi.</string>
    <string name="analyze">Analyze</string>
    <string name="camera">Camera</string>
    <string name="galeri">Galeri</string>
    <string name="haii_selamat_datang_kembali">Haii 👋, Yuk Deteksi Jamur Sekarang</string>
    <string name="gambar_jamur">Gambar Jamur</string>
    <string name="list_jamur">List Jamur yang Kamu Simpan</string>
    <string name="kosong">Belum Ada List Jamur Yang Kamu Simpan 🥲</string>
    <string name="logo_fungi_info">Logo Fungi.Info</string>
    <string name="daftar_info">Silahkan Isi Data Kamu 😊</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama">masukkan nama</string>
    <string name="pesan_error">Pesan Error</string>
    <string name="email">Email</string>
    <string name="masukkan_email">masukkan email</string>
    <string name="password">Password</string>
    <string name="masukkan_password">masukkan password</string>
    <string name="atau">Atau masuk dengan</string>
    <string name="google">Masuk dengan Google</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_info">Ketemu Lagi Deh 👋</string>
    <string name="password_baru">Password Baru</string>
    <string name="password_baru_info">Ganti Password kamu</string>
    <string name="simpan">Simpan</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_info">Masukkan Password Lama Kamu</string>
    <string name="reset_password_info_2">Masukkan email kamu</string>
    <string name="password_lama">Password Lama</string>
    <string name="lanjut">Lanjut</string>
    <string name="kirim">Kirim</string>
    <string name="profile">Profile</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="keluar">Keluar</string>
    <string name="akurasi_label">Akurasi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="fungsi">Fungsi</string>
    <string name="akurasi">Accuracy: %s%%</string>
    <string name="persen">%d%%</string>
    <string name="history_kamu">History Kamu</string>
    <string name="ciri_ciri">Ciri Ciri</string>
    <string name="mengapa_harus_dihindari">Mengapa Harus Dihindari</string>
    <string name="manfaat_bagi_kesehatan">Manfaat Bagi Kesehatan</string>
    <string name="deskripsi_jamur">Deskripsi jamur</string>
    <string name="ciri_ciri_jamur">Ciri-ciri jamur</string>
    <string name="mengapa_dihindari">Mengapa Dihindari</string>
    <string name="jamur_yang_kamu_simpan">Jamur Yang Kamu Simpan</string>
    <string name="history">History</string>
    <string name="about_fungi">Fungi.Info is a mobile application that uses <b>AI and image recognition</b> to identify fungi species from images, helping users distinguish between edible and poisonous varieties during outdoor activities.</string>
    <string name="meet_our_team"><b>C241-PS495</b> - Meet Our Team</string>
    <string name="profil_1">Peter</string>
    <string name="mobile_developer">Mobile Developer</string>
    <string name="profil_2">Ocha</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="profil_3">Nandito</string>
    <string name="profil_4">Arjuna</string>
    <string name="profil_5">Gladwin</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="profil_6">Salsabila</string>
    <string name="why_fungi">Why Fungi.Info</string>
    <string name="why_fungi_isi">Fungi.Info was developed as our capstone project at <b>Bangkit Academy 2024.</b> We aimed to create an AI-powered app that accurately identifies mushroom species, helping users distinguish between edible and toxic varieties during outdoor activities. Our goal is to provide essential knowledge and enhance safety for mushroom enthusiasts and adventurers.</string>
    <string name="what_fungi">What Mushroom can we Detect?</string>
    <string name="what_fungi_isi_1">Fungi.Info is equipped to identify a diverse range of mushroom species with precision and reliability. Our app can detect popular mushrooms such as</string>
    <string name="powered_by">Powered by</string>
    <string name="logo_sponsor">Logo_sponsor</string>
    <string name="close_button">Close Button</string>
    <string name="pro_text_fitur_1"><![CDATA[Upload & Sync data dengan Internet]]></string>
    <string name="pro_text_fitur_2">Live Preview Fungi Scan</string>
    <string name="pro_text_fitur_3">Berbagi Fungi Satu dengan Yang lain</string>
    <string name="pro_text_fitur_4">Model 3 Fungi yang lebih PRO</string>
    <string name="pro_text_fitur_5">Tidak ada Iklan</string>
    <string name="pro_button">UNLOCK PREMIUM RP. 50k/bulan</string>
    <string name="pro_caption">Bergabung dengan Komunita Fungi.info pro sedunia</string>
    <string name="pro_judul">Icon Upgrade Pro</string>
    <string name="home">Home</string>
    <string name="upgrade">Upgrade</string>
</resources>