<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".view.about.AboutActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/logov4_black"
                android:contentDescription="@string/logo_fungi_info"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/close_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_close"
                android:contentDescription="@string/close_button"
                android:clickable="true"
                android:focusable="true"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/garis"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:gravity="center"
            android:layout_marginTop="20dp"
            />


        <TextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/isi_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_fungi"
            android:textColor="@color/black"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/judul2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meet_our_team"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            />

        <LinearLayout
            android:id="@+id/isi_judul2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/peter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:src="@drawable/profil_1"
                    android:contentDescription="@string/profil_1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profil_1"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-6dp"
                    android:text="@string/mobile_developer"
                    android:textSize="11sp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ocha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:src="@drawable/profil_2"
                    android:contentDescription="@string/profil_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profil_2"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-6dp"
                    android:text="@string/machine_learning"
                    android:textSize="11sp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nandito"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:src="@drawable/profil_3"
                    android:contentDescription="@string/profil_3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profil_3"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-6dp"
                    android:text="@string/machine_learning"
                    android:textSize="11sp"
                    android:gravity="center" />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/arjuna"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/profil_4"
                android:contentDescription="@string/profil_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil_4"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:text="@string/machine_learning"
                android:textSize="11sp"
                android:gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/gladwin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/profil_5"
                android:contentDescription="@string/profil_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil_5"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:text="@string/cloud_computing"
                android:textSize="11sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/salsa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/profil_6"
                android:contentDescription="@string/profil_6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil_6"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:text="@string/cloud_computing"
                android:textSize="11sp"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>


        <TextView
            android:id="@+id/judul3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/why_fungi"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/isi_judul3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/why_fungi_isi"
            android:textColor="@color/black"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/judul4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_fungi"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/isi_judul4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_fungi_isi_1"
            android:textColor="@color/black"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/isi_judul4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/judul5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powered_by"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            />

        <ImageView
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:src="@drawable/bangkit"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logo_sponsor"
            />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:paddingTop="10dp">


            <ImageView
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:src="@drawable/fti"
                android:contentDescription="@string/logo_sponsor"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:src="@drawable/unbra"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/logo_sponsor"
                />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/kampus"
                android:contentDescription="@string/logo_sponsor"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/judul6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="© Fungi.Info 2024"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp"
            android:textSize="12sp"
            />

    </LinearLayout>

</ScrollView>