<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:paddingTop="100dp"
    android:paddingRight="30dp"
    android:paddingLeft="30dp"
    tools:context=".view.lupa.LupaPasswordActivity">

        <TextView
            android:id="@+id/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/reset_password"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/subjudul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/reset_password_info"
            android:layout_below="@id/judul"
            android:textSize="15sp"
            android:layout_marginTop="-10dp"
            />


        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subjudul"
            android:layout_marginTop="30dp"
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color"
            android:layout_below="@id/emailLabel"
            app:errorEnabled="true"
            app:endIconMode="custom"
            app:cursorColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconDrawable="@drawable/ic_error"
            app:endIconTint="@color/hint_color"
            app:endIconContentDescription="Error Icon"
            app:boxStrokeColor="@color/white"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textColorHint="@color/hint_color"
                android:hint="@string/masukkan_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/emailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailInputLayout"
            android:text="@string/pesan_error"
            android:layout_marginTop="-10dp"
            android:textSize="15sp"
            android:textColor="@color/red"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:background="@drawable/custom_button2"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:padding="15dp"
            android:textAllCaps="true"
            android:text="@string/kirim"
            android:layout_marginTop="20dp"
            android:layout_below="@id/emailInputLayout" />
</RelativeLayout>